WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
310295
AX: Comboboxes don't forward focus to their active descendant, preventing ATs from interacting with the combobox list items
https://bugs.webkit.org/show_bug.cgi?id=310295
Summary
AX: Comboboxes don't forward focus to their active descendant, preventing ATs...
Tyler Wilcock
Reported
2026-03-19 11:03:19 PDT
...
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2026-03-19 11:03:26 PDT
<
rdar://problem/172931074
>
Radar WebKit Bug Importer
Comment 2
2026-03-19 11:03:38 PDT
<
rdar://problem/172931277
>
Tyler Wilcock
Comment 3
2026-03-20 09:16:05 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/61014
EWS
Comment 4
2026-03-20 15:29:20 PDT
Committed
309641@main
(57486e8cd2b7): <
https://commits.webkit.org/309641@main
> Reviewed commits have been landed. Closing PR #61014 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug