AX: Comboboxes don't forward focus to it's active descendant, preventing ATs from interacting with the combobox list items rdar://172931277 https://bugs.webkit.org/show_bug.cgi?id=310295

Reviewed by Joshua Hoffman.

AccessibilityObject::shouldFocusActiveDescendant() was missing ComboBox, even though
supportsActiveDescendant() already included it. This meant that when aria-activedescendant
changed on a combobox (e.g. as the user arrows through options), WebKit posted
AXActiveElementChanged but not AXFocusedUIElementChanged for the active descendant. Without
the FocusedUIElementChanged notification, VoiceOver didn't move its cursor to the highlighted
option, preventing it from reading the option text.

Fix this by adding ComboBox to shouldFocusActiveDescendant().

* LayoutTests/accessibility/combobox/mac/combobox-activedescendant-notifications-expected.txt:
* LayoutTests/accessibility/combobox/mac/combobox-activedescendant-notifications.html:
* Source/WebCore/accessibility/AccessibilityObject.cpp:
(WebCore::AccessibilityObject::shouldFocusActiveDescendant const):

Canonical link: https://commits.webkit.org/309641@main